[package]
name = "libruntime"
version = "0.1.0"
edition = "2024"

[dependencies]
libprotocol = { path = "../libprotocol" }
serde_json = "1.0.149"
sha2 = "0.10.9"
insta = "1.46.3"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.101"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full", "test-util"] }
axum = "0.8.8"
http = "1.4.0"
async-trait = "0.1.89"
url = "2.5.8"

[dev-dependencies]
test_support = { path = "../test_support" }
