[package]
name = "libprotocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
jsonschema = "0.41.0"
thiserror = "2.0.18"
predicates = "3.1.3"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.3", features = ["yaml"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
