[package]
name = "libruntime"
version = "0.1.0"
edition = "2024"

[dependencies]
libprotocol = { path = "../libprotocol" }
serde_json = "1.0.149"
sha2 = "0.10.9"
insta = "1.46.3"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full", "test-util"] }
async-trait = "0.1.89"
hdrhistogram = "7.5.4"

[dev-dependencies]
test_support = { path = "../test_support" }
